updated jupyter samples

--- a/jupyter/trino2bq.ipynb
+++ b/jupyter/trino2bq.ipynb
@@ -7,48 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "53cd225c-3f8a-4987-9e90-6d2ca826f458",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from trino.dbapi import connect"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a4d6a51e-2c7a-4163-9122-163c18600a5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "host = '10.138.0.11'\n",
-    "port = \"8080\"\n",
-    "user = 'ws-demo3@mvp-infra.iam.gserviceaccount.com'\n",
-    "catalog=\"hyperlake\"\n",
-    "schema=\"hyperdata\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "b6f94cef-311a-498e-8249-9dc7828565df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn = connect(\n",
-    "    host=host,\n",
-    "    port=port,\n",
-    "    user=user,\n",
-    "    catalog=catalog,\n",
-    "    schema=schema,\n",
-    ")\n",
-    "cur = conn.cursor()\n"
+    "import pandas as pd\n",
+    "import hyperline"
    ]
   },
   {
@@ -58,9 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\"SELECT address, eth_balance FROM \\\"bigquery-public-data\\\".\\\"crypto_ethereum\\\".\\\"balances\\\" WHERE eth_balance > 0 LIMIT 10\")\n",
-    "rows = cur.fetchall()\n",
-    "df = pd.DataFrame(rows)\n"
+    "df = hyperline.sql.execute_sql(\"SELECT address, eth_balance FROM \\\"bigquery-public-data\\\".\\\"crypto_ethereum\\\".\\\"balances\\\" WHERE eth_balance > 0 LIMIT 10\")"
    ]
   },
   {
