--- a/jupyter/usdc2.ipynb
+++ b/jupyter/usdc2.ipynb
@@ -2,37 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "17cb4245-f85d-4afc-a6dc-1bc1e4ffd98d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import hyperline\n",
     "import pandas as pd\n",
-    "from trino.dbapi import connect\n",
     "from matplotlib import pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b71d73b4-c2c7-4727-b5b4-237006518e7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "host = '10.138.0.24'\n",
-    "port = \"8080\"\n",
-    "user = 'ws-async@stable-hydra-400302.iam.gserviceaccount.com'\n",
-    "catalog=\"hyperlake\"\n",
-    "schema=\"hyperdata\"\n",
-    "\n",
-    "conn = connect(\n",
-    "    host=host,\n",
-    "    port=port,\n",
-    "    user=user,\n",
-    "    catalog=catalog,\n",
-    "    schema=schema,\n",
-    ")\n",
-    "cur = conn.cursor()"
    ]
   },
   {
@@ -42,36 +19,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\"\"\"\n",
+    "df = hyperline.sql.execute_sql(\"\"\"\n",
     "WITH Transfers AS (\n",
     "  SELECT token_address token, to_address account, 0 _out, CAST(value as DOUBLE) _in\n",
-    "  FROM \"hyperlake\".\"ethereum\".\"token_transfers\" \n",
+    "  FROM \"hyperline\".\"ethereum\".\"token_transfers\" \n",
     "  WHERE block_timestamp >= DATE_TRUNC('DAY', TIMESTAMP '2023-01-01 19:15:36') \n",
     "  AND   block_timestamp <  DATE_TRUNC('DAY', TIMESTAMP '2023-01-31 19:15:36') \n",
     "  UNION ALL\n",
     "\n",
     "  SELECT token_address token, from_address account, CAST(value as DOUBLE) _out, 0 _in\n",
-    "  FROM \"hyperlake\".\"ethereum\".\"token_transfers\" \n",
+    "  FROM \"hyperline\".\"ethereum\".\"token_transfers\" \n",
     "  WHERE block_timestamp >= DATE_TRUNC('DAY', TIMESTAMP '2023-01-01 19:15:36') \n",
     "  AND   block_timestamp <  DATE_TRUNC('DAY', TIMESTAMP '2023-01-31 19:15:36') \n",
     ")\n",
     "\n",
     "SELECT label.name, balances.* FROM (\n",
     "  SELECT account, (1.0*(SUM(_in) - SUM(_out)) / 1000000.0) as balance\n",
-    "  FROM Transfers INNER JOIN  hyperlake.demo.labels labels ON token = labels.address\n",
+    "  FROM Transfers INNER JOIN  labelsdb.public.labels labels ON token = labels.address\n",
     "  WHERE labels.name = 'USD Coin (USDC)' \n",
     "  GROUP BY account\n",
     "  ORDER BY balance DESC\n",
     "  LIMIT 20000\n",
     ") balances\n",
     "\n",
-    "LEFT OUTER JOIN hyperlake.demo.labels label ON account = label.address\n",
+    "LEFT OUTER JOIN labelsdb.demo.labels label ON account = label.address\n",
     "\n",
     "WHERE label.name <> ''\n",
     "ORDER BY balances.balance DESC\n",
-    "    \"\"\")\n",
-    "rows = cur.fetchall()\n",
-    "    "
+    "    \"\"\")    "
    ]
   },
   {
@@ -81,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(rows, columns=['name', 'account', 'balance'])"
+    "df = df.columns=['name', 'account', 'balance']"
    ]
   },
   {
