cleanup jupyter samples

--- a/jupyter/basic_sql_access.ipynb
+++ b/jupyter/basic_sql_access.ipynb
@@ -41,6 +41,38 @@
     "with pd.option_context('display.max_colwidth', 200):\n",
     "  display(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c54d1f1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = hyperline.sql.execute_sql(\"SELECT address, eth_balance FROM \\\"bigquery-public-data\\\".\\\"crypto_ethereum\\\".\\\"balances\\\" WHERE eth_balance > 0 LIMIT 10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23805b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(result)\n",
+    "df.columns=['address', 'balance']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c12d8af7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pd.option_context('display.max_colwidth', None):\n",
+    "  display(df)"
+   ]
   }
  ],
  "metadata": {
