--- a/jupyter/usdc_analysis.ipynb
+++ b/jupyter/usdc_analysis.ipynb
@@ -19,15 +19,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = hyperline.sql.execute_sql(\"\"\"\n",
+    "result = hyperline.sql.execute_sql(\"\"\"\n",
     "WITH Transfers AS (\n",
-    "  SELECT token_address token, to_address account, 0 _out, CAST(value as DOUBLE) _in\n",
+    "  SELECT address token, to_address account, 0 _out, CAST(quantity as DOUBLE) _in\n",
     "  FROM \"hyperline\".\"ethereum\".\"token_transfers\" \n",
     "  WHERE block_timestamp >= DATE_TRUNC('DAY', TIMESTAMP '2023-01-01 19:15:36') \n",
     "  AND   block_timestamp <  DATE_TRUNC('DAY', TIMESTAMP '2023-01-31 19:15:36') \n",
     "  UNION ALL\n",
     "\n",
-    "  SELECT token_address token, from_address account, CAST(value as DOUBLE) _out, 0 _in\n",
+    "  SELECT address token, from_address account, CAST(quantity as DOUBLE) _out, 0 _in\n",
     "  FROM \"hyperline\".\"ethereum\".\"token_transfers\" \n",
     "  WHERE block_timestamp >= DATE_TRUNC('DAY', TIMESTAMP '2023-01-01 19:15:36') \n",
     "  AND   block_timestamp <  DATE_TRUNC('DAY', TIMESTAMP '2023-01-31 19:15:36') \n",
@@ -42,7 +42,7 @@
     "  LIMIT 20000\n",
     ") balances\n",
     "\n",
-    "LEFT OUTER JOIN labelsdb.demo.labels label ON account = label.address\n",
+    "LEFT OUTER JOIN labelsdb.public.labels label ON account = label.address\n",
     "\n",
     "WHERE label.name <> ''\n",
     "ORDER BY balances.balance DESC\n",
@@ -56,7 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.columns=['name', 'account', 'balance']"
+    "df = pd.DataFrame(result)\n",
+    "df.columns=['name', 'account', 'balance']"
    ]
   },
   {
@@ -358,16 +359,6 @@
     "plt.pie(df_sorted['balance'], labels=df_sorted['exchange'])\n",
     "plt.title('Exchange Account Balances')\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d93e951-d9d2-40dd-9a6b-9e6026ca19c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip"
    ]
   }
  ],
