--- a/jupyter/save_data.ipynb
+++ b/jupyter/save_data.ipynb
@@ -327,7 +327,7 @@
    "source": [
     "location = 'gs://hws-async/sahil@asynclabs.xyz/'\n",
     "# Save as CSV\n",
-    "df.to_csv(output.csv', header=True, index=False)"
+    "df.to_csv(location + 'output.csv', header=True, index=False)"
    ]
   },
   {
@@ -338,7 +338,8 @@
    "outputs": [],
    "source": [
     "# Save as Parquey\n",
-    "df.to_parquet('gs://hws-async/sahil@asynclabs.xyz/table.parquet')"
+    "parquet_file = location + 'table.parquet'\n",
+    "df.to_parquet(parquet_file)"
    ]
   },
   {
@@ -348,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df = pd.read_parquet('example_fp.parquet', engine='fastparquet')"
+    "new_df = pd.read_parquet(parquet_file)"
    ]
   }
  ],
