--- a/jupyter/save_data.ipynb
+++ b/jupyter/save_data.ipynb
@@ -351,6 +351,16 @@
    "source": [
     "new_df = pd.read_parquet(parquet_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b19b3d8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df"
+   ]
   }
  ],
  "metadata": {
